First steep of a big refactoring

--- a/Resources/views/Main/index.html.twig
+++ b/Resources/views/Main/index.html.twig
@@ -1,4 +1,4 @@
 {% block main %}
-    {% include "AliDatatableBundle:Main:datatableHtml.html.twig" %}
-    {% include "AliDatatableBundle:Main:datatableJs.html.twig" %}
+    {% include "DatatableBundle:Main:datatableHtml.html.twig" %}
+    {% include "DatatableBundle:Main:datatableJs.html.twig" %}
 {% endblock  %}
