--- a/Resources/views/Main/datatableHtml.html.twig
+++ b/Resources/views/Main/datatableHtml.html.twig
@@ -1,10 +1,9 @@
 {% block main %}
-{% if multiple %}
-<form name="frm-{{id}}">
-{% endif %}
-    <table class="{{ class|default('display table table-bordered') }}" id="{{id}}"> 
-        <thead> 
-            <tr> 
+    {{ dump(searchFields is empty) }}
+{% if multiple %}<form name="frm-{{ id }}">{% endif %}
+    <table class="{{ class|default('display table table-bordered') }}" id="{{ id }}">
+        <thead>
+            <tr>
             {% if multiple %}
                 <th width="1%" ><input type="checkbox" name="datatable_action_all" /></th>
             {% endif %}
@@ -13,10 +12,7 @@
                     <th>{{ label }}</th>
                 {% endif %}
             {% endfor %}
-            {% if action %}
-                <th>{{ 'ali.common.action'|trans()  }}</th>
-            {% endif %}
-            </tr> 
+            </tr>
         </thead>
         {% if search %}
         {% set i = 0 %}
@@ -26,18 +22,14 @@
                 <th></th>
                 {% endif %}
                 {% for label,key in fields %}
-                    {% if label != '_identifier_' %}                   
-                        {% if search_fields is not empty %}
-                            {% if i in search_fields %}
-                            <td><input index="{{i}}" searchable="true" type="text" placeholder="{{ 'ali.common.search'|trans() }}" class="search_init" /></td>
+                    {% if label != '_identifier_' %}
+                        {% if searchFields is not empty %}
+                            {% if i in searchFields %}
+                            <td><input index="{{ i }}" searchable="true" type="text" placeholder="{% trans %}ali.common.search{% endtrans %}" class="search_init" /></td>
                             {% else %}
                             <td></td>
                             {% endif %}
-                        {% else %}
-                        <td><input index="{{i}}" searchable="true" type="text" placeholder="{{ 'ali.common.search'|trans() }}" class="search_init" /></td>
                         {% endif %}
-                    {% elseif label == '_identifier_'and action and not action_twig %}
-                        <td></td>
                     {% endif %}
                     {% set i = i+1 %}
                 {% endfor %}
@@ -45,7 +37,5 @@
         </tfoot>
         {% endif %}
     </table>
-{% if multiple %}
-</form>
-{% endif %}
+{% if multiple %}</form>{% endif %}
 {% endblock  %}
