--- a/Resources/views/Main/datatableHtml.html.twig
+++ b/Resources/views/Main/datatableHtml.html.twig
@@ -24,7 +24,7 @@
                     {% if label != '_identifier_' %}
                         {% if searchFields is not empty %}
                             {% if i in searchFields %}
-                            <td><input index="{{ i }}" searchable="true" type="text" placeholder="{% trans %}ali.common.search{% endtrans %}" class="search_init" /></td>
+                            <td><input index="{{ i }}" searchable="true" type="text" placeholder="{% trans %}datatable.common.search{% endtrans %}" class="search_init" /></td>
                             {% else %}
                             <td></td>
                             {% endif %}
