--- a/Resources/views/Main/datatableJs.html.twig
+++ b/Resources/views/Main/datatableJs.html.twig
@@ -2,8 +2,8 @@
 
 {% spaceless %}
 <script type="text/javascript">
-$(document).ready(function(){
-    $('#{{ id }}').DataTable({{ js|json_encode()|raw }});
+$(document).ready(function() {
+    $('#{{ id }}').DataTable({ {% for elementName, element in js %}{{ elementName }}: {{ element|printDatatableOption(elementName) }}{% if loop.last != true %},{%endif%}{% endfor %} });
 });
 {% if multiple %}
 {% include "WaldoDatatableBundle:Snippet:multipleRaw.js.twig" %}
